Fixing issue where spacing between content cards looked off when right after each other

--- a/public/styles/misc/content-card.less
+++ b/public/styles/misc/content-card.less
@@ -11,4 +11,8 @@
 		border-bottom: 1px solid @grey-lighter; 
 		color: @grey-light;
 	}
+
+	+ .content-card{
+		margin-top: @gw-Md;
+	}
 }
